# Finance-Insight-Service-CrewAI-

./: .dockerignore  .env.example  .gitignore  API_KEYS.md  Dockerfile  README.md  deployment.yaml  pyproject.toml  run.sh
.choreo/: component.yaml
UI/: PROJECT_GUIDE.md
UI/app/: globals.css  layout.tsx  page.tsx
UI/app/agents/: page.tsx
UI/app/components/: AnimatedList.tsx  ChatComposer.tsx  ChatEmptyState.tsx  ChatView.tsx  HistoryList.tsx  SectionCard.tsx  SettingsForm.tsx  Sidebar.tsx  TopBar.tsx
UI/app/help/: page.tsx
UI/app/history/: page.tsx
UI/app/knowledge-base/: page.tsx
UI/app/settings/: page.tsx
UI/app/workflows/: page.tsx
UI/lib/: api.ts
scripts/: increase-memory.sh  k8s-memory-patcher.yaml  keep-memory-patched.sh
src/finance_insight_service/: api_server.py  crew.py  full_main.py  main.py  quant_main.py
src/finance_insight_service/config/: agents.yaml  tasks.yaml
src/finance_insight_service/tools/: fundamentals_fetch.py  market_data_fetch.py  safe_python_exec.py
src/ui/: PROJECT_GUIDE.md
src/ui/app/: globals.css
src/ui/app/components/: ChatComposer.tsx  ChatEmptyState.tsx  ChatView.tsx  SettingsForm.tsx  TopBar.tsx
src/ui/lib/: api.ts
