[project]
name = "finance-insight-service"
version = "0.1.0"
description = "Finance Insight Service - research agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "crewai[tools]>=0.83.0",
  "crewai-tools>=0.28.0",
  "python-dotenv>=1.0.1",
  "serpapi>=0.1.5",
]

[project.scripts]
research_agent = "finance_insight_service.main:main"

[tool.uv]
package = true
